beta/css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
    line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/********************************/
@font-face {
    font-family: 'Avenir', sans-serif;
    src: url("../fonts/Avenir.ttf");
}

html {
    font-family: 'Avenir';
    box-sizing: border-box; 
}

body {
    margin: 0; 
    font-weight: 500;
    padding-top: 95px;
}

h2 {
    font-size: 2em; 
    font-weight: 500;
    padding-top: 20px;
    padding-bottom: 20px;
}

.h3-style {
    font-size: 1.5em; 
    font-weight: 400;
    padding-top: 15px;
    padding-bottom: 15px;
}

a:hover {
  text-decoration: none;
}

.center {
  text-align: center;
}

.container { 
  max-width: 1400px; 
  width: 100%;
} 

.navbar-brand,
.navbar-nav li a {
    line-height: 75px;
    height: 75px;
    padding-top: 0;
}

.navbar-fixed-top, .navbar-inner {
    background: rgba(255, 255, 255, 0.95);
}

.navbar-brand {
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 1.75em;
    font-weight: 600;
}

.navbar-link {
    text-transform: uppercase; 
    letter-spacing: 1.5px;
    font-size: 0.8em;
}

.navbar-toggle {
  border: none;
  background: transparent !important;
}
.navbar-toggle:hover {
  background: transparent !important;
}
.navbar-toggle .icon-bar {
  width: 22px;
  transition: all 0.2s;
}
.navbar-toggle .top-bar {
  transform: rotate(45deg);
  transform-origin: 10% 10%;
}
.navbar-toggle .middle-bar {
  opacity: 0;
}
.navbar-toggle .bottom-bar {
  transform: rotate(-45deg);
  transform-origin: 10% 90%;
}
.navbar-toggle.collapsed .top-bar {
  transform: rotate(0);
}
.navbar-toggle.collapsed .middle-bar {
  opacity: 1;
}
.navbar-toggle.collapsed .bottom-bar {
  transform: rotate(0);
}
/***** Custom style *****/
.navbar .navbar-nav {
  display: inline-block;
  float: none;
  vertical-align: top;
  padding-top: 20px;
}

.navbar .navbar-collapse {
  text-align: center;
  max-height: 100vh;
  height: 100vh;

}

.collapse .collapsing {
    -webkit-transition: none;
    transition: none;
}

.no-transition {
  -webkit-transition: height 0.01s;
  -moz-transition: height 0.01s;
  -ms-transition: height 0.01s;
  -o-transition: height 0.01s;
  transition: height 0.01s;
}

section {
  width: 100%;
  padding: 0 7%;
  display: table;
  margin: 0;
  max-width: none;
}

.research, .about {
    padding-top: 6em;
}

.intro {
  height: 90vh;
  background-color: #212121;
}

.problem-statement {
    height: 80vh;
    background-color: #212121;
}

.content {
  display: table-cell;
  vertical-align: middle;
}

.intro-text {
  font-size: 2.5em;
  display: block;
  color: white;
  font-weight: 300;
  padding-top: 1.2em;
  padding-bottom: 1.2em;
  line-height: 1.3;
}

.problem-headline {
    text-transform: uppercase;
    color: white;
    font-weight: 600;
    text-align: center;
    font-size: 3em;
    padding-bottom: 1.5em;
}

.problem-text {
    color: white;
    font-size: 1.5em;
    line-height: 1.5;
    padding-bottom: 0.3em;
}

.problem-overview-header {
    color: white;
    padding-top: 1.5em;
    padding-bottom: 0.5em;
    font-size: 1.5em;
    font-weight: 600;
}

.problem-overview-info {
    color: #212121;
    font-size: 1.25em;
    font-weight: 300;
    background-color: white;
    padding-top: 10px;
    padding-bottom: 10px;
    margin: 10px;
}

@media (max-width: 768px) {
    body {
        padding-top: 75px;
    }
    .problem-headline {
        font-size: 2em;
        padding-bottom: 1.0em;
        margin-top: 50px;
    }

    .problem-text {
        font-size: 18px;
        line-height: 1.4;
        padding-bottom: 0.2em;
    }

    .problem-overview-header {
        color: white;
        padding-top: 1.5em;
        padding-bottom: 0.5em;
        font-size: 1.0em;
    }

    .problem-overview-info {
        color: #212121;
        font-size: 1.0em;    
        margin: 5px;
    }

    .mobile-margin-bottom {
        margin-bottom: 50px;
    }
}

.button {
    -webkit-transition: all 300ms ease;
    -moz-transition: all 300ms ease;
    -ms-transition: all 300ms ease;
    -o-transition: all 300ms ease;
    transition: all 300ms ease;    
    height: auto;
    padding: 8px 12px;
    background: #333333;
    color: #ffffff;
    font-size: 14px;
    font-weight: 600;    
    border: 2px solid #333333;
    border-radius: 1px;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    white-space: normal;
    line-height: normal;
}

.button-black:hover {
    background-color: #FFFFFF;
    color:#333333;
    border-color: #333333;
}

.button-link {
    text-decoration: none;
    font-weight: normal;
    color: #333333;
    cursor: pointer;
}

/******https://codepen.io/anon/pen/KqobNN****/
.arrow {
	position: absolute;
	bottom: 20px;
	left: 50%;
	z-index: 2;
	display: inline-block;
	-webkit-transform: translate(0, -50%);
	transform: translate(0, -50%);
	color: #fff;
	font : normal 400 20px/1 'Josefin Sans', sans-serif;
	letter-spacing: .1em;
	text-decoration: none;
	transition: opacity .3s;
}
.arrow:hover {
	opacity: .5;
}
/* ... */

